unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/Legacy_Law_Ruler_Data__c.object-meta.xml
<CustomObject>
    <label>Legacy Law Ruler Data</label>
    <nameField>
        <displayFormat>LLRD-{000000}</displayFormat>
        <label>Legacy Law Ruler Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy Law Ruler Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>