unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Legacy Law Ruler Data</relationshipLabel>
    <relationshipName>Legacy_Law_Ruler_Data</relationshipName>
    <type>Lookup</type>
</CustomField>