unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/fields/Legacy_LR_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_LR_Case_Type__c</fullName>
    <label>Legacy LR Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>