unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/fields/LR_Autism_Level__c.field-meta.xml
<CustomField>
    <fullName>LR_Autism_Level__c</fullName>
    <label>LR Autism Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>