unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/fields/LR_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>LR_Diagnosis__c</fullName>
    <label>LR Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>