unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/fields/LR_Diagnosis_Check__c.field-meta.xml
<CustomField>
    <fullName>LR_Diagnosis_Check__c</fullName>
    <label>LR Diagnosis Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>