unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/fields/LR_Full_Mother_Name__c.field-meta.xml
<CustomField>
    <fullName>LR_Full_Mother_Name__c</fullName>
    <label>LR Full Mother Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>