unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/fields/LR_Result_In_Death__c.field-meta.xml
<CustomField>
    <fullName>LR_Result_In_Death__c</fullName>
    <label>LR Result In Death</label>
    <length>255</length>
    <type>Text</type>
</CustomField>