unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/fields/LR_Tier_3__c.field-meta.xml
<CustomField>
    <fullName>LR_Tier_3__c</fullName>
    <label>LR Tier 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>