unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/fields/LR_Use_Type__c.field-meta.xml
<CustomField>
    <fullName>LR_Use_Type__c</fullName>
    <label>LR Use Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>