unpackaged/main/default/objects/Legacy_Law_Ruler_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intake__c</columns>
    <columns>LegacyId_Lead_ID__c</columns>
    <columns>Legacy_LR_Case_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>